# RSWebService

./: Cargo.toml  foo.txt
src/: handler.rs  main.rs  router.rs
