[package]
name = "RSWebService"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.19", default-features = false, features = ["async-await"] }
hyper = {version = "0.14.16",  features = ["http1", "server", "tcp"] }
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread"] }
serde = {version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
route-recognizer = "0.3.1"
bytes = "1.1.0"
async-trait = "0.1.52"
clokwerk  = "0.3.5"

[profile.dev]
debug = 0

[profile.test]
debug = 0

[profile.release]
panic = 'abort'